# wasm-knife

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  index.js  index.jsx  inner-guide.md  package-lock.json  package.json
cpp/: trim-func.cpp
public/: 1.wasm
src/: loader.js  trim-func.cjs  wasm_helper.js
tests/: 1.wasm  1.wat  test.js
wasm/: 1.wasm  1.wat  CMakeLists.txt  main.c  main.cpp  main.h  main.wat  w2.c  w2.dis  w2.h  w2.wasm  w2.wat
wasm/2/: main.c  main.cpp  main.h  main.wat
